EventRelay/force-app/main/default/objects/Order_Status_Event__e/Order_Status_Event__e.object-meta.xml
<CustomObject>
    <label>Order Status Event</label>
    <pluralLabel>Order Status Events</pluralLabel>
</CustomObject>