EventRelay/force-app/main/default/objects/Order_Status_Event__e/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <label>Changed By</label>
    <type>Text</type>
    <length>120</length>
</CustomField>