EventRelay/force-app/main/default/objects/Order_Status_Event__e/fields/Old_Status__c.field-meta.xml
<CustomField>
    <fullName>Old_Status__c</fullName>
    <label>Old Status</label>
    <type>Text</type>
    <length>40</length>
</CustomField>