EventRelay/force-app/main/default/objects/Order_Status_Event__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <label>Order Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>