EventRelay/force-app/main/default/objects/Order_Status_Event__e/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <type>Text</type>
    <length>80</length>
</CustomField>